--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    button{
+        width: 80px;
+         height: 30px;
+          background-color: green;
+           color: white;
+           font-size: 20px;
+           border: 0;
+    }
+</style>
 <body>
-    
 
+    <h1>Hello Problem Solving !!</h1>
+    <!-- <button class="btn1">Finish</button> -->
+    <!-- <p>First problem Eve Or Odd</p> -->
 
     <script src="script.js"></script>
 </body>
